crates/wxctl/src/output/snapshots/wxctl__output__exec_snapshots_test__apply_success_ascii_80.snap
---
source: crates/wxctl/src/output/exec_snapshots_test.rs
expression: "apply_success_screen(&panel(80, ColorMode::Plain, GlyphSet::Ascii))"
---
  | Execution
          Type                    Name                                   Action   Time
    +- +  orchestrate_connection  httpbin_bearer  [id=dd33a26...418c21]  created  0.6s
    +- +  tool                    httpbin_tools  [id=805591f...cd0733]   created  1.8s
    `- +  agent                   httpbin_agent  [id=5d59f99...fa0072]   created  2.3s

ok apply: +3 created - 4.8s

  created resources:
    agent.httpbin_agent  https://api.watson-orchestrate.ibm.com/agents/abc123
